# horseAI

./: .gitignore  dev.ipynb  dev_executed.ipynb  main.ipynb  main.py  pyproject.toml
modules/constants/: __init__.py  _config.py  _local_paths.py  _master.py
modules/preparing/: __init__.py  _get_rawdata.py  _scrape_html.py  _scrape_race_id_list.py  _scrape_shutuba_table.py
modules/preprocessing/: _feature_engineering.py  _horse_info_processor.py  _horse_results_processor.py
modules/training/: _data_splitter.py  _model_wrapper.py
