[project]
name = "keibaai-v2-2-1-1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "dill>=0.3.9",
    "ipywidgets>=8.1.5",
    "jupyterlab>=4.4.0",
    "lightgbm==3.3.0",
    "lxml>=5.3.2",
    "matplotlib>=3.10.1",
    "numpy>=2.2.4",
    "optuna-integration>=4.2.1",
    "pandas>=2.2.3",
    "requests>=2.32.3",
    "scikit-learn>=1.6.1",
    "selenium>=4.0.0",
    "tqdm>=4.67.1",
    "webdriver-manager>=4.0.2",
]
